# notea

./: .gitignore  LICENSE  README.md  main.py  notea.py  pyproject.toml
src/: __init__.py  __main__.py  notea.py
src/notea/: __init__.py  __main__.py  notea.py
