[project]
name = "notea"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
dependencies = [
    "stringcase~=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"notea" = "notea:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notea"]

