[project]
name = "notea"
version = "0.2.0"
description = "Notes as easy as a cup of tea"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
dependencies = [
    "stringcase~=1.2.0",
    "rich>=13.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"notea" = "notea:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notea"]

